script initialization with materialize and default input defintion

--- a/coninput/index.html
+++ b/coninput/index.html
@@ -3,7 +3,7 @@
 		<title>Coninput</title>
 	</head>
 	<body>
-		
+		<div class="coninput coninput-materialize">250</div>
 		<script type="text/javascript" src="scripts/jquery.js"></script>
 		<script type="text/javascript" src="scripts/coninput.js"></script>
 	</body>
