--- a/coninput/index.html
+++ b/coninput/index.html
@@ -3,8 +3,11 @@
 		<title>Coninput</title>
 	</head>
 	<body>
-		<div class="coninput coninput-materialize">250</div>
+		<div class="coninput coninput-materialize demoClass">250</div>
+		<div class="coninput coninput-materialize demoClass">500</div>
+
 		<script type="text/javascript" src="scripts/jquery.js"></script>
 		<script type="text/javascript" src="scripts/coninput.js"></script>
+		<script type="text/javascript" src="scripts/scripts.js"></script>
 	</body>
 </html>
